# kinship-earth-mcp

./: .dockerignore  .gitignore  ARCHITECTURE.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  STRATEGY.md  TESTING.md  pyproject.toml  setup-claude-desktop.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: test.yml
examples/jupyter/: README.md  ecological-monitoring.ipynb  getting-started.ipynb
examples/qgis/: README.md
launcher/: pyproject.toml
launcher/src/kinship_earth/: __init__.py  __main__.py
servers/ebird/: pyproject.toml
servers/ebird/src/ebird_mcp/: __init__.py  adapter.py  server.py
servers/ebird/tests/: test_bird_observations.py
servers/era5/: pyproject.toml
servers/era5/src/era5_mcp/: __init__.py  adapter.py  server.py
servers/era5/tests/: test_pnw_climate_context.py
servers/gbif/: pyproject.toml
servers/gbif/src/gbif_mcp/: __init__.py  adapter.py  server.py
servers/gbif/tests/: test_global_biodiversity.py
servers/inaturalist/: pyproject.toml
servers/inaturalist/src/inaturalist_mcp/: __init__.py  adapter.py  server.py
servers/inaturalist/tests/: test_biodiversity_survey.py
servers/neonscience/: pyproject.toml
servers/neonscience/src/neonscience_mcp/: __init__.py  adapter.py  server.py
servers/neonscience/tests/: test_pnw_bird_climate.py
servers/obis/: pyproject.toml
servers/obis/src/obis_mcp/: __init__.py  adapter.py  server.py
servers/obis/tests/: test_north_atlantic_cetaceans.py
servers/orchestrator/: pyproject.toml
servers/orchestrator/src/kinship_orchestrator/: __init__.py  auth.py  auth_sqlite.py  server.py
servers/orchestrator/tests/: test_anomaly_tool.py  test_auth.py  test_cross_source.py  test_ecosystem_state.py  test_feedback_tool.py  test_history.py  test_integration.py  test_memory_tools.py  test_prompts.py  test_scientist_scenarios.py  test_whats_around_me.py  test_workflow_tools.py
servers/usgs-nwis/: pyproject.toml
servers/usgs-nwis/src/usgs_nwis_mcp/: __init__.py  adapter.py  server.py
servers/usgs-nwis/tests/: test_watershed_health.py
servers/xeno-canto/: pyproject.toml
servers/xeno-canto/src/xenocanto_mcp/: __init__.py  adapter.py  server.py
servers/xeno-canto/tests/: test_acoustic_ecology.py
service/: Dockerfile  pyproject.toml
service/src/kinship_service/: __init__.py  app.py  auth.py  config.py
service/src/kinship_service/routes/: __init__.py  api.py  health.py
service/tests/: test_app.py  test_auth.py
shared/: pyproject.toml
shared/src/kinship_shared/: __init__.py  adapter.py  anomaly_detect.py  anomaly_graph.py  baselines.py  citations.py  ecology_tools.py  export.py  geojson.py  graph_extract.py  graph_schema.py  graph_store.py  monitoring.py  ranking.py  retry.py  schema.py  state_builder.py  storage.py  storage_sqlite.py  summarize.py  viz.py
shared/tests/: test_anomaly_detect.py  test_anomaly_graph.py  test_baselines.py  test_graph.py  test_graph_extract.py  test_memory_ranking.py  test_monitoring.py  test_storage.py  test_viz.py
specs/: 001-conversation-storage.md  001-usgs-nwis-hardening.md  002-auth-proxy.md  002-whats-around-me.md  003-auth-integration.md  003-schema-evolution.md  004-ebird-validation.md  004-workflow-tools.md  005-orchestrator-reliability.md  005-visualization-hints.md  006-community-launch.md  006-graph-scaffold.md  007-graph-pipeline.md  007-test-coverage-audit.md  008-memory-tools.md  008-normalization-audit.md  009-source-registry.md  009-supabase-proxy.md  010-memory-ranking.md  010-phase2-streaming-prep.md  011-ecosystem-state.md  012-anomaly-detection.md  013-event-synthesis.md  014-new-data-sources.md  QUEUE.md
tools/: schema_snapshot.py
walkthroughs/: 01-forest-ecology.md  02-marine-research.md  03-data-discovery.md
