[project]
name = "kinship-earth"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["shared", "servers/neonscience", "servers/obis", "servers/era5", "servers/ebird", "servers/inaturalist", "servers/usgs-nwis", "servers/orchestrator", "launcher"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = ["Testing", ".venv"]
