[project]
name = "kinship-earth-launcher"
version = "0.1.0"
requires-python = ">=3.12"
description = "Unified launcher for all Kinship Earth MCP servers"
license = { text = "MIT" }
dependencies = [
    "neonscience-mcp",
    "obis-mcp",
    "era5-mcp",
    "kinship-orchestrator",
]

[project.scripts]
kinship-earth = "kinship_earth.__main__:main"

[tool.uv.sources]
neonscience-mcp = { workspace = true }
obis-mcp = { workspace = true }
era5-mcp = { workspace = true }
kinship-orchestrator = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/kinship_earth"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
