[project]
name = "kinship-service"
version = "0.1.0"
requires-python = ">=3.12"
description = "Authenticated ecological intelligence proxy for Kinship Earth"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "kinship-shared",
    "kinship-orchestrator",
    "pydantic-settings>=2.0",
]

[tool.uv.sources]
kinship-shared = { workspace = true }
kinship-orchestrator = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
