[project]
name = "gbif-mcp"
version = "0.1.0"
requires-python = ">=3.12"
description = "MCP server for the GBIF API (Global Biodiversity Information Facility)"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
    "kinship-shared",
]

[tool.uv.sources]
kinship-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/gbif_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
