[project]
name = "neonscience-mcp"
version = "0.1.0"
requires-python = ">=3.12"
description = "MCP server for the NEON (National Ecological Observatory Network) data API"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
    "kinship-shared",
]

[tool.uv.sources]
kinship-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
