[project]
name = "kinship-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
description = "Cross-source orchestration MCP server for Kinship Earth"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
    "kinship-shared",
    "neonscience-mcp",
    "obis-mcp",
    "era5-mcp",
]

[tool.uv.sources]
kinship-shared = { workspace = true }
neonscience-mcp = { workspace = true }
obis-mcp = { workspace = true }
era5-mcp = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
