[project]
name = "kinship-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
description = "Cross-source orchestration MCP server for Kinship Earth"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
    "kinship-shared",
    "neonscience-mcp",
    "obis-mcp",
    "era5-mcp",
    "ebird-mcp",
    "inaturalist-mcp",
    "usgs-nwis-mcp",
    "gbif-mcp",
    "xenocanto-mcp",
    "soilgrids-mcp",
]

[tool.uv.sources]
kinship-shared = { workspace = true }
neonscience-mcp = { workspace = true }
obis-mcp = { workspace = true }
era5-mcp = { workspace = true }
ebird-mcp = { workspace = true }
inaturalist-mcp = { workspace = true }
usgs-nwis-mcp = { workspace = true }
gbif-mcp = { workspace = true }
xenocanto-mcp = { workspace = true }
soilgrids-mcp = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
