[project]
name = "xenocanto-mcp"
version = "0.1.0"
requires-python = ">=3.12"
description = "MCP server for the Xeno-canto API (bird and wildlife sound recordings)"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
    "kinship-shared",
]

[tool.uv.sources]
kinship-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/xenocanto_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
